[shenker/image_analysis,image_analysis/trench_detection] find_trenches no longer returns MultiIndex row index, trench_set is added as a normal column.

--- a/paulssonlab/src/paulssonlab/shenker/image_analysis/220814 New architecture.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/image_analysis/220814 New architecture.ipynb
@@ -53,7 +53,7 @@
    "outputs": [],
    "source": [
     "from paulssonlab.image_analysis import *\n",
-    "from paulssonlab.image_analysis.new import *"
+    "import paulssonlab.image_analysis.new as new"
    ]
   },
   {
@@ -313,7 +313,7 @@
    "outputs": [],
    "source": [
     "%%time\n",
-    "trenches = trench_detection.find_trenches(img)"
+    "trenches = new.image.find_trench_bboxes(img)"
    ]
   },
   {
@@ -365,7 +365,7 @@
     "    # TODO: use a namedtuple (or typing.NamedTuple, or dataclass) as the key so that fields are named\n",
     "    keys_to_crop = pipeline.state.setdefault(need_cropping_key, []).append(raw_key)\n",
     "    if trenches is None and channel == trench_channel:\n",
-    "        trenches = pipeline.delayed(trench_detection.find_trenches)\n",
+    "        trenches = pipeline.delayed(new.image.find_trench_bboxes)\n",
     "        pipeline.table[trenches_key] = trenches\n",
     "    if trenches is not None:\n",
     "        for key in keys_to_crop:\n",
@@ -375,8 +375,6 @@
     "                frames,\n",
     "                include_frame=include_frame,\n",
     "                frame_transformation=frame_transformation,\n",
-    "                filename=filename,\n",
-    "                position=position,\n",
     "            )\n",
     "            # add to keys_to_measure\n",
     "            # segment\n",
