[image_analysis/trench_detection,shenker/image_analysis] Allow passing peak_func into find_trenches, move find_peaks from trench_detection.hough to trench_detection.peaks. Added detrending and plots to find_peaks. Needed to switch from periodogram to peak-finding to deal with spatial distortion with Iris 15 at 20x, the edges of the FOV were fitting extremely poorly, ruining trench finding. A better way to do this would be to extract peak locations from a spectrogram (see notebook).

--- a/paulssonlab/src/paulssonlab/shenker/image_analysis/220814 New architecture.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/image_analysis/220814 New architecture.ipynb
@@ -24,6 +24,7 @@
     "from distributed import Client, LocalCluster, progress\n",
     "from dask_jobqueue import SLURMCluster\n",
     "import matplotlib.pyplot as plt\n",
+    "import holoviews as hv\n",
     "from tqdm.auto import tqdm\n",
     "from functools import partial\n",
     "from itertools import product\n",
@@ -63,6 +64,15 @@
    "outputs": [],
    "source": [
     "%load_ext pyinstrument"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "hv.extension(\"bokeh\")"
    ]
   },
   {
@@ -303,7 +313,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "img = nd2.get_frame_2D(v=10, c=1, t=0)"
+    "img = nd2.get_frame_2D(v=100, c=1, t=0)"
    ]
   },
   {
@@ -323,6 +333,196 @@
    "outputs": [],
    "source": [
     "trenches"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%time\n",
+    "diag2 = util.tree()\n",
+    "trenches2 = trench_detection.find_trenches(img[:1000,:], peak_func=trench_detection.peaks.find_peaks, diagnostics=diag2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ui.show_plot_browser(diag2[\"labeling\"][\"find_trench_lines\"]);"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "trenches2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data = diag2[\"labeling\"][\"find_trench_lines\"][\"hough_2\"][\"trimmed_profile\"].data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "freqs, spectrum = scipy.signal.periodogram(\n",
+    "    data.y.values, window=\"hann\", nfft=2**14, scaling=\"spectrum\"\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "hv.Curve((freqs,spectrum))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "f, t, Sxx = scipy.signal.spectrogram(data.y.values, nfft=2**12, window=\"hann\", scaling=\"spectrum\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "f, t, Sxx = scipy.signal.spectrogram(data.y.values, nfft=2**12, window=\"hann\", scaling=\"spectrum\", mode=\"complex\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "np.abs(Sxx)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "hv.QuadMesh((t, f, np.abs(Sxx)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "hv.QuadMesh((t, f, np.real(Sxx)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.pcolormesh(t, f, Sxx, shading='gouraud')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ui.show_plot_browser(diag2[\"labeling\"]);"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "diag2#[\"label_1\"][\"find_trench_ends\"][\"image_with_trenches\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ui.show_plot_browser(diag2[\"label_10\"][\"find_trench_ends\"][\"image_with_trenches\"]);"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%time\n",
+    "diag = util.tree()\n",
+    "trenches = trench_detection.find_trenches(img, diagnostics=diag)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ui.show_plot_browser(diag);"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%time\n",
+    "crops = {}\n",
+    "for i, crop in it.islice(new.image.iter_crops(img, trenches), 10):\n",
+    "    crops[i] = crop\n",
+    "    #mask = trench_segmentation.segment(crop)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.imshow(crops[7])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.imshow(mask)"
    ]
   },
   {
