[shenker/image_analysis,image_analysis/new] Trench bbox diag plot. The first trench set has both wrong angle and erroneous bboxes. Will fix latter first.

--- a/paulssonlab/src/paulssonlab/shenker/image_analysis/220815 New architecture.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/image_analysis/220815 New architecture.ipynb
@@ -27,7 +27,7 @@
     "import holoviews as hv\n",
     "from tqdm.auto import tqdm\n",
     "from functools import partial\n",
-    "from itertools import product\n",
+    "import itertools as it\n",
     "from collections import namedtuple\n",
     "import nd2reader\n",
     "import re\n",
@@ -323,16 +323,7 @@
    "outputs": [],
    "source": [
     "%%time\n",
-    "trenches = new.image.find_trench_bboxes(img)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "trenches"
+    "trenches = new.image.find_trench_bboxes(img, peak_func=trench_detection.peaks.find_peaks, overlap=-0.3)"
    ]
   },
   {
@@ -343,7 +334,101 @@
    "source": [
     "%%time\n",
     "diag2 = util.tree()\n",
-    "trenches2 = trench_detection.find_trenches(img[:1000,:], peak_func=trench_detection.peaks.find_peaks, diagnostics=diag2)"
+    "trenches2 = trench_detection.find_trenches(img, peak_func=trench_detection.peaks.find_peaks, diagnostics=diag2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%time\n",
+    "diag2 = util.tree()\n",
+    "trenches2 = new.image.find_trench_bboxes(img[:1000,:1000], peak_func=trench_detection.peaks.find_peaks, overlap=0, diagnostics=diag2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "diag2[\"bboxes\"].opts(frame_width=700,frame_height=400)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "trenches2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "diag2.keys()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "hv.Rectangles((0,0,1,1)).opts(fill_color=None, line_color=\"red\", line_width=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "top_endpoints = np.vstack((trenches2[\"top_x\"].values, trenches2[\"top_y\"].values)).T\n",
+    "bottom_endpoints = np.vstack((trenches2[\"bottom_x\"].values, trenches2[\"bottom_y\"].values)).T\n",
+    "top_endpoints.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "np.hstack((top_endpoints, bottom_endpoints)).shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "trenches2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "diag2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ui.show_plot_browser(diag2[\"label_1\"]);"
    ]
   },
   {
@@ -513,7 +598,43 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plt.imshow(crops[7])"
+    "plt.imshow(crops[0].T)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.imshow(crops[1].T)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.imshow(crops[2].T)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.imshow(crops[3].T)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.imshow(crops[4].T)"
    ]
   },
   {
