[shenker,image_analysis] get_trench_bbox now uses the width information output by scipy.signal.find_peaks to set trench widths.

--- a/paulssonlab/src/paulssonlab/shenker/image_analysis/220815 New architecture.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/image_analysis/220815 New architecture.ipynb
@@ -323,7 +323,35 @@
    "outputs": [],
    "source": [
     "%%time\n",
-    "trenches = new.image.find_trench_bboxes(img, peak_func=trench_detection.peaks.find_peaks, overlap=-0.3)"
+    "trenches = new.image.find_trench_bboxes(img, peak_func=trench_detection.peaks.find_peaks)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%time\n",
+    "trenches3 = new.image.find_trench_bboxes(img[:1000,:1000], peak_func=trench_detection.peaks.find_peaks)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "trenches3[\"widths\"].median()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "trenches3[\"widths\"].plot.hist(bins=100)"
    ]
   },
   {
@@ -345,7 +373,7 @@
    "source": [
     "%%time\n",
     "diag2 = util.tree()\n",
-    "trenches2 = new.image.find_trench_bboxes(img[:1000,:1000], peak_func=trench_detection.peaks.find_peaks, overlap=0, diagnostics=diag2)"
+    "trenches2 = new.image.find_trench_bboxes(img[:1000,:1000], peak_func=trench_detection.peaks.find_peaks, diagnostics=diag2)"
    ]
   },
   {
