[shenker/image_analysis,image_analysis/trench_detection] Replace two hough iterations with a single. This seems to make trench finding better with a 10-20% performance cost. There is still a problem with endpoint detection or clustering (see notebook) that leads to bad angle for last trench set, will investigate later.

--- a/paulssonlab/src/paulssonlab/shenker/image_analysis/220815 New architecture.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/image_analysis/220815 New architecture.ipynb
@@ -373,7 +373,25 @@
    "source": [
     "%%time\n",
     "diag2 = util.tree()\n",
-    "trenches2 = new.image.find_trench_bboxes(img[:1000,:1000], peak_func=trench_detection.peaks.find_peaks, diagnostics=diag2)"
+    "trenches2 = new.image.find_trench_bboxes(img, peak_func=trench_detection.peaks.find_peaks, diagnostics=diag2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ui.show_plot_browser(diag2[\"find_trenches\"][\"label_4\"]);"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "diag2[\"find_trenches\"]"
    ]
   },
   {
