[shenker/image_analysis] Finished sketch of new architecture for Quansight.

--- a/paulssonlab/src/paulssonlab/shenker/image_analysis/220815 New architecture.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/image_analysis/220815 New architecture.ipynb
@@ -534,40 +534,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Pipeline"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import logging\n",
-    "\n",
-    "\n",
-    "class Pipeline:\n",
-    "    def __init__(self, output_dir):\n",
-    "        self.logger = logging.getLogger(self.__name__)\n",
-    "        self.logger.basicConfig(level=logging.DEBUG)\n",
-    "        self.output_dir = Path(output_dir)\n",
-    "        self.state = {}\n",
-    "        self.array = {}\n",
-    "        self.table = {}\n",
-    "\n",
-    "    def delayed(self, func, *args, **kwargs):\n",
-    "        # TODO:\n",
-    "        # log exceptions\n",
-    "        # log warnings (deduplicated, count instances)\n",
-    "        # optionally retry with diag if func takes \"diagnostics\" argument\n",
-    "        # log benchmarking/profiling? or collect stats, only log outliers (+ call arguments)\n",
-    "        return dask.delayed(func, *args, **kwargs)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "# Functions"
    ]
   },
@@ -596,11 +562,31 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import logging\n",
+    "\n",
+    "\n",
+    "class Pipeline:\n",
+    "    def __init__(self, output_dir):\n",
+    "        self.logger = logging.getLogger(\"Pipeline\")\n",
+    "        self.output_dir = Path(output_dir)\n",
+    "        self.state = {}\n",
+    "        self.array = {}\n",
+    "        self.table = {}\n",
+    "\n",
+    "    def delayed(self, func, *args, **kwargs):\n",
+    "        # TODO:\n",
+    "        # log exceptions\n",
+    "        # log warnings (deduplicated, count instances)\n",
+    "        # optionally retry with diag if func takes \"diagnostics\" argument\n",
+    "        # log benchmarking/profiling? or collect stats, only log outliers (+ call arguments)\n",
+    "        return dask.delayed(func, *args, **kwargs)\n",
+    "\n",
     "def crop_trenches(img, trenches):\n",
     "    crops = {}\n",
     "    for i, crop in it.islice(new.image.iter_crops(img, trenches), 10):\n",
     "        crops[i] = crop\n",
     "    return crops\n",
+    "\n",
     "\n",
     "def segment_trenches(crops):\n",
     "    masks = {}\n",
@@ -608,68 +594,100 @@
     "        masks[i] = trench_segmentation.segment(crop)\n",
     "    return masks\n",
     "\n",
+    "\n",
     "def measure_crops(label_image, intensity_image):\n",
-    "    return pd.DataFrame(skimage.measure.regionprops_table(\n",
-    "        label_image,\n",
-    "        properties=(\n",
-    "            \"label\",\n",
-    "            \"intensity_mean\",\n",
-    "        ),\n",
+    "    return pd.DataFrame(\n",
+    "        skimage.measure.regionprops_table(\n",
+    "            label_image,\n",
+    "            properties=(\n",
+    "                \"label\",\n",
+    "                \"intensity_mean\",\n",
+    "            ),\n",
+    "        )\n",
     "    ).set_index(\"label\")\n",
     "\n",
+    "\n",
     "def measure_mask_crops(label_image):\n",
-    "    return pd.DataFrame(skimage.measure.regionprops_table(\n",
-    "        label_image,\n",
-    "        properties=(\n",
-    "            \"label\",\n",
-    "            \"area\",\n",
-    "            \"axis_major_length\",\n",
-    "            \"axis_minor_length\",\n",
-    "            \"orientation\",\n",
-    "            \"centroid\",\n",
-    "        ),\n",
+    "    return pd.DataFrame(\n",
+    "        skimage.measure.regionprops_table(\n",
+    "            label_image,\n",
+    "            properties=(\n",
+    "                \"label\",\n",
+    "                \"area\",\n",
+    "                \"axis_major_length\",\n",
+    "                \"axis_minor_length\",\n",
+    "                \"orientation\",\n",
+    "                \"centroid\",\n",
+    "            ),\n",
+    "        )\n",
     "    ).set_index(\"label\")\n",
+    "\n",
     "\n",
     "# TODO: use a namedtuple (or typing.NamedTuple, or dataclass) for keys so that fields are named\n",
     "def handle_image(pipeline, msg):\n",
     "    image = msg[\"image\"]\n",
-    "    {\"channel\": channel, \"fov_num\": fov_num, \"t\": t, **other_metadata} = metadata\n",
+    "    metadata = msg[\"metadata\"]\n",
+    "    fov_num = metadata[\"fov_num\"]\n",
+    "    t = metadata[\"t\"]\n",
+    "    channel = metadata[\"channel\"]\n",
     "    raw_key = (\"raw\", fov_num, t, channel)\n",
-    "    pipeline.array[raw_key][t] = image\n",
-    "    # do we have trenches?\n",
-    "    trenches_key = (\"trenches\", fov_num,)\n",
+    "    # store raw image (in production, we won't do this, we will only store crops as we do below)\n",
+    "    pipeline.array[raw_key] = image\n",
+    "    # TODO: we need a way to store per-frame metadata and write it to disk\n",
+    "    trenches_key = (\n",
+    "        \"trenches\",\n",
+    "        fov_num,\n",
+    "    )\n",
     "    trenches = pipeline.table.get(trenches_key)\n",
+    "    # check if we have done trench detection for this FOV\n",
     "    if trenches is None and channel == trench_detection_channel:\n",
-    "        trenches = pipeline.delayed(new.image.find_trench_bboxes)\n",
+    "        # if not, find trenches and save the resulting table\n",
+    "        trenches = pipeline.delayed(new.image.find_trench_bboxes)(image, peak_func=trench_detection.peaks.find_peaks)\n",
     "        pipeline.table[trenches_key] = trenches\n",
-    "    need_cropping_key = (\"need_cropping\", fov_num)\n",
-    "    keys_to_crop = pipeline.state.setdefault(need_cropping_key, [])\n",
+    "    # this list keeps track of all the raw frames that need to be cropped\n",
+    "    # frames for multiple channels will accumulate in this list until we get a frame for trench_detection_channel\n",
+    "    # if we have already processed such a frame, then keys_to_crop will contain only the current frame (raw_key)\n",
+    "    keys_to_crop = pipeline.state.setdefault((\"keys_to_crop\", fov_num), [])\n",
     "    keys_to_crop.append(raw_key)\n",
+    "    # we only can do further processing if we have already detected trenches for this FOV\n",
     "    if trenches is not None:\n",
     "        for raw_to_crop in keys_to_crop:\n",
     "            crop_key = (\"crops\", *raw_to_crop[1:])\n",
-    "            # save trench crops\n",
-    "            pipeline.array[crop_key] = pipeline.delayed(crop_trenches)(pipeline.array[raw_to_crop])\n",
+    "            # save trench crops for every frame in keys_to_crop\n",
+    "            pipeline.array[crop_key] = pipeline.delayed(crop_trenches)(\n",
+    "                pipeline.array[raw_to_crop], trenches\n",
+    "            )\n",
     "            segmentation_key = (\"segmentation\", fov_num, t, segmentation_channel)\n",
     "            segmentation = pipeline.array.get(segmentation_key)\n",
     "            if segmentation is not None:\n",
+    "                # if we have segmentation masks for this frame, we can immediately segment only this frame\n",
     "                keys_to_measure = [crop_key]\n",
     "            else:\n",
-    "                need_measurement_key = (\"need_measurement\", fov_num, t)\n",
-    "                keys_to_measure = pipeline.state.setdefault(need_measurement_key, [])\n",
+    "                # we don't have a segmentation mask yet, so we need to add to the keys_to_measure list\n",
+    "                keys_to_measure = pipeline.state.setdefault((\"keys_to_measure\", fov_num, t), [])\n",
     "                if crop_key[-1] in measure_channels:\n",
+    "                    # we want to measure this frame\n",
     "                    keys_to_measure.append(crop_key)\n",
     "                if crop_key[-1] == segmentation_channel:\n",
-    "                    segmentation = pipeline.delayed(segment_trenches)(pipeline.array[crop_key])\n",
+    "                    # if this frame's channel is the segmentation channel, run segmentation\n",
+    "                    segmentation = pipeline.delayed(segment_trenches)(\n",
+    "                        pipeline.array[crop_key]\n",
+    "                    )\n",
     "                    pipeline.array[segmentation_key] = segmentation\n",
-    "                    pipeline.table[(\"measurements\", *crop_key[1:],)] = pipeline.delayed(measure_mask_crops)(segmentation)\n",
+    "                    # once we have the segmentation mask, get measurements for the mask\n",
+    "                    pipeline.table[(\"measurements\", *crop_key[1:],)] = pipeline.delayed(\n",
+    "                        measure_mask_crops\n",
+    "                    )(segmentation)\n",
     "            segmentation = pipeline.array.get(segmentation_key)\n",
+    "            # if we now have the segmentation mask, try measuring all frames in the keys_to_measure list\n",
     "            if segmentation is not None:\n",
     "                for crop_to_measure in keys_to_measure:\n",
     "                    measurements_key = (\"measurements\", *crop_to_measure[1:])\n",
-    "                    pipeline.table[measurements_key] = pipeline.delayed(measure_crops)(segmentation, pipeline.array[crop_to_measure])\n",
-    "                keys_to_measure.clear()\n",
-    "        keys_to_crop.clear()\n",
+    "                    pipeline.table[measurements_key] = pipeline.delayed(measure_crops)(\n",
+    "                        segmentation, pipeline.array[crop_to_measure]\n",
+    "                    )\n",
+    "                pipeline.state.pop((\"keys_to_measure\", fov_num, t), None)\n",
+    "        pipeline.state.pop((\"keys_to_crop\", fov_num), None)\n",
     "\n",
     "\n",
     "def handle_fish_barcode(pipeline, msg):\n",
@@ -679,12 +697,14 @@
     "# we should pick a name that's better/more intuitive than handle_message\n",
     "def handle_message(pipeline, msg):\n",
     "    match msg:\n",
-    "        case {\"type\": \"image\", **_}:\n",
+    "        case {\"type\": \"image\", **info}:\n",
     "            match info:\n",
-    "                case {\"image_type\": \"fish_barcode\", **_}:\n",
+    "                case {\"image_type\": \"fish_barcode\"}:\n",
     "                    handle_fish_barcode(pipeline, msg)\n",
     "                case other:\n",
     "                    handle_image(pipeline, msg)\n",
+    "        case {\"type\": \"nd2_metadata\"}:\n",
+    "            print(\"got metadata\") # TODO\n",
     "        case {\"type\": \"event\", **info}:\n",
     "            print(\"event\", info)\n",
     "        case {\"type\": \"done\"}:\n",
@@ -700,14 +720,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "handle_message({\"type\": \"img\", \"imgs\": 0, \"metadata\": 1})"
+    "%%time\n",
+    "pipeline = Pipeline(\"/home/jqs1/scratch/jqs1/microscopy/220718/new_architecture/test1\")\n",
+    "for msg in new.readers.send_nd2(\n",
+    "    \"/home/jqs1/scratch/jqs1/microscopy/220718/RBS_DEG_library_20x.nd2\",\n",
+    "    slices=dict(v=slice(1), t=slice(1)),\n",
+    "):\n",
+    "    handle_message(pipeline, msg)"
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
-    "# Test"
+    "g = pipeline.array[('crops', 0, 0, 'RFP-Penta')]"
    ]
   },
   {
@@ -717,11 +745,61 @@
    "outputs": [],
    "source": [
     "%%time\n",
-    "for msg in arch.send_nd2(\n",
-    "    \"/home/jqs1/scratch/jqs1/microscopy/220718/RBS_DEG_library_20x.nd2\",\n",
-    "    slices=dict(v=slice(10)),\n",
-    "):\n",
-    "    pass"
+    "g.compute(scheduler=\"synchronous\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "g.visualize()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a = client.compute(g)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "client.restart()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "client.gather(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "client.cancel(a)"
    ]
   },
   {
@@ -789,13 +867,40 @@
     "cluster = SLURMCluster(\n",
     "    queue=\"short\",\n",
     "    walltime=\"06:00:00\",\n",
-    "    memory=\"20GB\",\n",
+    "    memory=\"2GB\",\n",
     "    local_directory=\"/tmp\",\n",
     "    log_directory=\"/home/jqs1/log\",\n",
     "    cores=1,\n",
     "    processes=1,\n",
     ")\n",
     "client = Client(cluster)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cluster"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cluster.scale(1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cluster.adapt(maximum=20)"
    ]
   },
   {
